api key google y css

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -645,7 +645,7 @@ footer {
 /* =================== inputs =======================*/
 .form-control {
     background-color: #FFFFFF;
-    border: 1px solid #E3E3E3;
+    border: 1px solid #b9b1b1;
     border-radius: 4px;
     box-shadow: none;
     color: #444444;
