--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <% var title = 'GN8' %>
 <% include head %>
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+<script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places&key=AIzaSyAzYwOlXopnXFIid6TAbzOwhHFmTp6IN3Q"></script>
 <script src="/assets/js/jquery.geocomplete.js"></script> 
 
     <div class="col-md-10 no-paddin-xs">
